# stagger

./: LICENSE  README.md  pyproject.toml  setup.py
stagger/: __init__.py  commandline.py  conversion.py  errors.py  fileutil.py  frames.py  id3.py  id3v1.py  specs.py  tags.py  util.py
test/: __init__.py  alltests.py  conversion.py  fileutil.py  friendly.py  id3v1.py  id3v1_fileop.py  samples.py  specs.py  tag.py
